--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -2,17 +2,22 @@
 	box-sizing: border-box;
 }
 html{
-	font-size:62.5%;
+	font-size:125%;
 }
 
 body{
 	font-family: Helvetica, Arial, sans-serif;
-	font-size:$m-size;
+	font-size:1rem;
 	background:grey;
 }
 
 .wrapper{
   width:1200px;
+  margin:0 auto;
+}
+
+.wrapper-large{
+  width:1600px;
   margin:0 auto;
 }
 
