--- a/src/styles/game-area/_level.scss
+++ b/src/styles/game-area/_level.scss
@@ -20,16 +20,20 @@
 
   }
 
-  &-player-lives{
-     &::before{
-       content: '';
-       display:block;
-       width:100%;
-       height:10px;
-       border-radius:20px;
-       background-color:green;
-     }
+  &-player-life-bar{
+    display:block;
+    width:100%;
+    height:10px;
+    border-radius:20px;
+    background-color:green;
   }
+
+  // &-player-lives{
+  //    &::before{
+  //      content: '';
+       
+  //    }
+  // }
 
   &-opponent-lives{
     &::before{
