--- a/src/styles/game-area/_level.scss
+++ b/src/styles/game-area/_level.scss
@@ -21,11 +21,11 @@
   }
 
   &-player-life-bar{
-    display:block;
-    width:100%;
-    height:10px;
-    border-radius:20px;
-    background-color:green;
+    // display:block;
+    // width:100%;
+    // height:10px;
+    // border-radius:20px;
+    // background-color:green;
   }
 
   // &-player-lives{
@@ -36,13 +36,17 @@
   // }
 
   &-opponent-lives{
-    &::before{
-      content: '';
-      display:block;
-      width:100%;
-      height:10px;
-      border-radius:20px;
-      background-color:green;
-    }
+   
   }
+}
+
+//RE-USABLE
+
+.life-bar{
+    display:block;
+    width:100%;
+    height:20px;
+    border-radius:20px;
+    background-color:green;
+    transition: width .3s;
 }
