--- a/styles/style.css
+++ b/styles/style.css
@@ -131,3 +131,24 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box; }
+
+html {
+  font-size: 125%; }
+
+body {
+  font-size: 1.5rem;
+  background-image: url("./../images/background.png"); }
+
+.wrapper {
+  max-width: 1280px;
+  margin: 0 auto; }
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0; }
+
+img {
+  width: 100%;
+  height: 100%;
+  display: block; }
