--- a/styles/style.css
+++ b/styles/style.css
@@ -136,8 +136,12 @@ html {
   font-size: 125%; }
 
 body {
-  font-size: 1.5rem;
-  background-image: url("./../images/background.png"); }
+  font-size: 1.3rem;
+  letter-spacing: 10px;
+  font-family: "Bangers", sans-serif;
+  background-image: url("./../images/background.png");
+  color: #fff;
+  line-height: 1.5; }
 
 .wrapper {
   max-width: 1280px;
@@ -152,3 +156,16 @@ img {
   width: 100%;
   height: 100%;
   display: block; }
+
+.header {
+  padding: 1px; }
+  .header-heading {
+    margin: 0;
+    font-size: 4rem;
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 20px;
+    background: -webkit-linear-gradient(330deg, rgba(0, 0, 0, 0.8) 50%, rgba(91, 50, 86, 0.8));
+    background: -o-linear-gradient(330deg, rgba(0, 0, 0, 0.8) 50%, rgba(91, 50, 86, 0.8));
+    background: linear-gradient(120deg, rgba(0, 0, 0, 0.8) 50%, rgba(91, 50, 86, 0.8));
+    padding: 2rem 2rem; }
