--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,3 +1,5 @@
 @import "./base/setup";
 @import "./base/variables";
 @import "./base/base";
+@import "./layout/header";
+@import "./pages/setup-page";
