--- a/styles/base/_variables.scss
+++ b/styles/base/_variables.scss
@@ -2,3 +2,6 @@ $color-white : #fff;
 $color-black : #000;
 $color-primary : #5B3256;
 $color-primary-light : #9B59B6;
+
+$font-primary : "Bangers", sans-serif;
+$font-secondary : "Open Sans", sans-serif;
