--- a/styles/layout/_header.scss
+++ b/styles/layout/_header.scss
@@ -1,5 +1,5 @@
 .header{
-  padding:1px;
+  
   &-heading {
     margin:0;
     font-size:4rem;
@@ -7,7 +7,7 @@
     text-transform: uppercase;
     letter-spacing:20px;
     background: linear-gradient(120deg, rgba($color-black,.8) 50%, rgba($color-primary,.8));
-    padding:1rem 0rem;
+    padding:.5rem 0rem;
     
   }
 }
