--- a/styles/pages/_question.scss
+++ b/styles/pages/_question.scss
@@ -20,37 +20,39 @@
 
   &-player-name {
     grid-column: 1/-1;
-    font-size:2rem;
+    font-size:2.25rem;
     margin: 1rem 0 0 0;
+  }
+
+  &-question {
+    font-family:"Open Sans", sans-serif;
+    letter-spacing:1px;
+    font-size:1.8rem;
+    margin: 1rem 0;
   }
 
   &-answers {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-column-gap: 2rem;
-    grid-row-gap:2rem;
+    grid-gap:1.5rem;
+  }
+  &-list-item {
+    height:100%;
   }
 
   &-answer-btn {
-    border:2px solid $color-white;
-    display:block;
-    border-radius:10px;
-    outline:none;
-    background:none;
-    color:currentColor;
-    padding:1rem 2rem;
     width:100%;
     text-align:left;
-    transition: transform .3s, background-color .3s;
-    
-    &:hover, &:focus {
-      transform: translateY(-3px);
-      background-color:rgba($color-primary, .5);
-    }
+    height:100%;
   }
+
   &-list-item {
     &:not(:last-child){
       margin-bottom:.5rem;
     }
+  }
+
+  &-next {
+    margin-top:1rem;
   }
 }
