--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,6 +1,7 @@
-@import "./base/setup";
-@import "./base/variables";
-@import "./base/base";
-@import "./layout/header";
-@import "./pages/setup-page";
-@import "./pages/question";
+@import "base/setup";
+@import "base/variables";
+@import "base/base";
+@import "layout/header";
+@import "pages/setup-page";
+@import "pages/question";
+@import "pages/game-over";
