--- a/styles/base/_base.scss
+++ b/styles/base/_base.scss
@@ -4,11 +4,13 @@ html {
 
 body {
   font-size:1.5rem;
-  letter-spacing: 5px;
   font-family: $font-primary;
+  letter-spacing: 5px;
+  line-height:1.6;
+
   background-image: url("./../images/background.png");
   color:$color-white;
-  line-height:1.6;
+  
 }
 
 .wrapper{
@@ -28,20 +30,25 @@ img {
   display:block;
 }
 
+.hidden{
+  display:none;
+}
+
 .btn {
-  display:block;
-  background:none;
   padding:.5rem 1rem;
-  color:currentColor;
   border:5px solid $color-white;
   border-radius:10px;
-  transition: transform .3s, background-color .3s;
 
-  &:hover, &:focus {
-    transform: translateY(-3px);
-    background-color:rgba($color-primary, .5);
-  }
+  background:none;
+  color:currentColor;
+  transition: .3s all;
 
+    &:hover, &:focus {
+      transform: translateY(-2px);
+      box-shadow: inset -1px -2px 7px 50px $color-primary-light;
+      color:$color-white;
+    }
+    
   &:disabled {
     background: $color-primary;
     color: darken($color-white,20);
@@ -49,6 +56,7 @@ img {
     &:hover, &:focus {
       transform: none;
       background-color:$color-primary;
+      box-shadow:none;
     }
   }
 }
