--- a/styles/style.css
+++ b/styles/style.css
@@ -137,11 +137,11 @@ html {
 
 body {
   font-size: 1.5rem;
-  letter-spacing: 5px;
   font-family: "Bangers", sans-serif;
+  letter-spacing: 5px;
+  line-height: 1.6;
   background-image: url("./../images/background.png");
-  color: #fff;
-  line-height: 1.6; }
+  color: #fff; }
 
 .wrapper {
   max-width: 1280px;
@@ -157,23 +157,25 @@ img {
   height: 100%;
   display: block; }
 
+.hidden {
+  display: none; }
+
 .btn {
-  display: block;
-  background: none;
   padding: .5rem 1rem;
-  color: currentColor;
   border: 5px solid #fff;
   border-radius: 10px;
-  -webkit-transition: background-color .3s, -webkit-transform .3s;
-  transition: background-color .3s, -webkit-transform .3s;
-  -o-transition: transform .3s, background-color .3s;
-  transition: transform .3s, background-color .3s;
-  transition: transform .3s, background-color .3s, -webkit-transform .3s; }
+  background: none;
+  color: currentColor;
+  -webkit-transition: .3s all;
+  -o-transition: .3s all;
+  transition: .3s all; }
   .btn:hover, .btn:focus {
-    -webkit-transform: translateY(-3px);
-    -ms-transform: translateY(-3px);
-    transform: translateY(-3px);
-    background-color: rgba(91, 50, 86, 0.5); }
+    -webkit-transform: translateY(-2px);
+    -ms-transform: translateY(-2px);
+    transform: translateY(-2px);
+    -webkit-box-shadow: inset -1px -2px 7px 50px #9B59B6;
+    box-shadow: inset -1px -2px 7px 50px #9B59B6;
+    color: #fff; }
   .btn:disabled {
     background: #5B3256;
     color: #cccccc; }
@@ -181,7 +183,9 @@ img {
       -webkit-transform: none;
       -ms-transform: none;
       transform: none;
-      background-color: #5B3256; }
+      background-color: #5B3256;
+      -webkit-box-shadow: none;
+      box-shadow: none; }
 
 .header-heading {
   margin: 0;
@@ -197,12 +201,11 @@ img {
 .setup {
   padding: 2rem 0rem; }
   .setup-form {
-    border: 10px solid #fff;
-    margin: 50px;
     width: 60%;
+    margin: auto;
+    border: 10px solid #fff;
     padding: 1rem;
     text-align: center;
-    margin: auto;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -217,15 +220,16 @@ img {
   .setup-name {
     width: 75%; }
   .setup-number-questions, .setup-difficulty, .setup-categories, .setup-name {
-    padding: .5rem;
-    text-align: center;
     font-size: 1.4rem;
     font-family: "Open Sans", sans-serif;
     letter-spacing: 2px;
+    text-align: center;
+    padding: .5rem;
     border-radius: 10px; }
     .setup-number-questions:focus, .setup-difficulty:focus, .setup-categories:focus, .setup-name:focus {
+      color: white;
       outline: 5px solid #fff;
-      background-color: #f2f2f2; }
+      background-color: #c6a0d5; }
   .setup-button {
     margin: 1rem 0; }
   .setup-label {
@@ -236,7 +240,7 @@ img {
   padding: 2rem 0; }
   .question-content {
     border: 5px solid #fff;
-    padding: 2rem 3rem;
+    padding: 2rem;
     text-align: center;
     background-color: rgba(0, 0, 0, 0.5); }
   .question-header {
@@ -249,7 +253,19 @@ img {
     align-items: center;
     margin: 0 auto; }
   .question-heading {
-    text-decoration: underline; }
+    text-decoration: underline;
+    margin: 0; }
+  .question-box {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; }
   .question-player-name {
     grid-column: 1/-1;
     font-size: 2.25rem;
@@ -267,11 +283,49 @@ img {
     grid-gap: 1.5rem; }
   .question-list-item {
     height: 100%; }
+  .question-list-item:not(:last-child) {
+    margin-bottom: .5rem; }
   .question-answer-btn {
     width: 100%;
     text-align: left;
-    height: 100%; }
-  .question-list-item:not(:last-child) {
-    margin-bottom: .5rem; }
+    height: 100%;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: -webkit-min-content 1fr;
+    -ms-grid-columns: min-content 1fr;
+    grid-template-columns: -webkit-min-content 1fr;
+    grid-template-columns: min-content 1fr;
+    grid-column-gap: 10px;
+    grid-row-gap: 5px;
+    line-height: 1.2;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center; }
+  .question-num {
+    -ms-flex-item-align: center;
+    -ms-grid-row-align: center;
+    align-self: center; }
+  .question-answer {
+    margin: 0; }
   .question-next {
     margin-top: 1rem; }
+
+.game-over {
+  padding: 2rem 0; }
+  .game-over-heading {
+    margin: 0; }
+  .game-over-img-box {
+    width: 50%;
+    margin: 0 auto; }
+  .game-over-wrapper {
+    padding: 2rem 0;
+    display: -ms-grid;
+    display: grid;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    text-align: center;
+    border: 5px solid #fff;
+    background: rgba(0, 0, 0, 0.5); }
+  .game-over-stats {
+    margin: 1rem 0 1rem 0; }
