--- a/styles/pages/_game-over.scss
+++ b/styles/pages/_game-over.scss
@@ -1,23 +1,24 @@
 .game-over {
-  padding:2rem 0;
+  padding: 2rem 0;
+
   &-heading{
-    margin:0;
+    margin: 0;
   }
 
   &-img-box{
-    width:50%;
-    margin:0 auto;
+    width: 50%;
+    margin: 0 auto;
   }
   &-wrapper {
-    padding:2rem 0;
-    display:grid;
-    justify-content: center;
     text-align: center;
-    border:5px solid #fff;
-    background:rgba(0,0,0,.5);
+    border: 5px solid #fff;
+    padding: 2rem 0;
+    background: rgba(0,0,0,.5);
+    display: grid;
+    justify-content: center;
   }
 
   &-stats {
-    margin:1rem 0 1rem 0;
+    margin: 1rem 0;
   }
 }
