--- a/styles/style.css
+++ b/styles/style.css
@@ -188,15 +188,15 @@ img {
       box-shadow: none; }
 
 .header-heading {
-  margin: 0;
   font-size: 4rem;
   text-align: center;
   text-transform: uppercase;
   letter-spacing: 20px;
+  margin: 0;
+  padding: .5rem 0rem;
   background: -webkit-linear-gradient(330deg, rgba(0, 0, 0, 0.8) 50%, rgba(91, 50, 86, 0.8));
   background: -o-linear-gradient(330deg, rgba(0, 0, 0, 0.8) 50%, rgba(91, 50, 86, 0.8));
-  background: linear-gradient(120deg, rgba(0, 0, 0, 0.8) 50%, rgba(91, 50, 86, 0.8));
-  padding: .5rem 0rem; }
+  background: linear-gradient(120deg, rgba(0, 0, 0, 0.8) 50%, rgba(91, 50, 86, 0.8)); }
 
 .setup {
   padding: 2rem 0rem; }
@@ -239,9 +239,9 @@ img {
 .question {
   padding: 2rem 0; }
   .question-content {
+    text-align: center;
     border: 5px solid #fff;
     padding: 2rem;
-    text-align: center;
     background-color: rgba(0, 0, 0, 0.5); }
   .question-header {
     display: -ms-grid;
@@ -271,9 +271,9 @@ img {
     font-size: 2.25rem;
     margin: 1rem 0 0 0; }
   .question-question {
+    font-size: 1.8rem;
     font-family: "Open Sans", sans-serif;
     letter-spacing: 1px;
-    font-size: 1.8rem;
     margin: 1rem 0; }
   .question-answers {
     display: -ms-grid;
@@ -289,6 +289,7 @@ img {
     width: 100%;
     text-align: left;
     height: 100%;
+    line-height: 1.2;
     display: -ms-grid;
     display: grid;
     -ms-grid-columns: -webkit-min-content 1fr;
@@ -297,7 +298,6 @@ img {
     grid-template-columns: min-content 1fr;
     grid-column-gap: 10px;
     grid-row-gap: 5px;
-    line-height: 1.2;
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center; }
@@ -318,14 +318,14 @@ img {
     width: 50%;
     margin: 0 auto; }
   .game-over-wrapper {
+    text-align: center;
+    border: 5px solid #fff;
     padding: 2rem 0;
+    background: rgba(0, 0, 0, 0.5);
     display: -ms-grid;
     display: grid;
     -webkit-box-pack: center;
     -ms-flex-pack: center;
-    justify-content: center;
-    text-align: center;
-    border: 5px solid #fff;
-    background: rgba(0, 0, 0, 0.5); }
+    justify-content: center; }
   .game-over-stats {
-    margin: 1rem 0 1rem 0; }
+    margin: 1rem 0; }
