--- a/styles/pages/_game-over.scss
+++ b/styles/pages/_game-over.scss
@@ -1,13 +1,8 @@
 .game-over {
   padding: 2rem 0;
 
-  &-heading{
-    margin: 0;
-  }
-
-  &-img-box{
-    width: 50%;
-    margin: 0 auto;
+  @include respond(large){
+    padding: 2rem;
   }
   &-wrapper {
     text-align: center;
@@ -16,6 +11,15 @@
     background: rgba(0,0,0,.5);
     display: grid;
     justify-content: center;
+  }
+
+  &-heading{
+    margin: 0;
+  }
+
+  &-img-box{
+    width: 40%;
+    margin: 0 auto;
   }
 
   &-stats {
