--- a/styles/pages/_setup-page.scss
+++ b/styles/pages/_setup-page.scss
@@ -1,6 +1,6 @@
 .setup {
-  padding: 2rem 0rem; 
-
+  padding:2rem 0;
+  
   &-form {
     width: 60%;
     margin: auto;
@@ -14,6 +14,14 @@
     flex-direction: column;
     align-items: center;
     background-color: rgba($color-black,.5);
+
+    @include respond(large) {
+      width:70%;
+    }
+
+    @include respond(medium2) {
+      width:75%;
+    }
   }
 
   &-name {
@@ -37,6 +45,10 @@
       outline: 5px solid $color-white;
       background-color: lighten($color-primary-light,20);
     }
+
+    @include respond(medium2) {
+      font-size:1.2rem;
+    }
   }
 
   &-button {
@@ -44,7 +56,6 @@
   }
   
   &-label{
-    font-size: 1.5rem;
     margin: .8rem 0;
   }
 }
