--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,5 +1,6 @@
 @import "base/setup";
 @import "base/variables";
+@import "base/mixins";
 @import "base/base";
 @import "layout/header";
 @import "pages/setup-page";
