--- a/styles/pages/_game-over.scss
+++ b/styles/pages/_game-over.scss
@@ -4,10 +4,11 @@
   @include respond(large){
     padding: 2rem;
   }
+
   &-wrapper {
     text-align: center;
     border: 5px solid #fff;
-    padding: 2rem 0;
+    padding: 2rem;
     background: rgba(0,0,0,.5);
     display: grid;
     justify-content: center;
